--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,8 @@ authors = ["Jaesik <joje1283@gmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.10"
 Django = "^4.0.4"
+gunicorn = {extras = ["uvicorn"], version = "^20.1.0"}
+uvicorn = "^0.17.6"
 
 [tool.poetry.dev-dependencies]
 
