--- a/.github/workflows/home.yml
+++ b/.github/workflows/home.yml
@@ -27,5 +27,5 @@ jobs:
           docker tag ${{ secrets.DOCKER_HUB_USERNAME }}/shop:${GITHUB_SHA::7} shop_api
           docker stop server 
           docker run -d --rm --name server -p 8000:8000 \
-            -e DJANGO_SETTINGS_MODULE=shop_django.settings.prod
+            -e DJANGO_SETTINGS_MODULE=shop_django.settings.prod \
             -e SECRET_KEY="{{ secrets.DJANGO_SECRET_KEY }}" shop_api
