정적 파일이 있는 우분투 환경에서 파이썬 패키지 추가 설치가 필요하다. 관련 주석 추가

--- a/.github/workflows/home.yml
+++ b/.github/workflows/home.yml
@@ -1,3 +1,6 @@
+# 정적 파일이 위치하는 서버에 backports-zoneinfo 패키지를 추가로 설치한다 -> poetry add --no-dev backports-zoneinfo
+# 미 설치시 collectstatic 명령이 안된다.
+
 name: Docker Image CI
 
 on:
