--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ python = "^3.10"
 Django = "^4.0.4"
 gunicorn = {extras = ["uvicorn"], version = "^20.1.0"}
 uvicorn = "^0.17.6"
+psycopg2 = "^2.9.3"
 
 [tool.poetry.dev-dependencies]
 
