--- a/.github/workflows/home.yml
+++ b/.github/workflows/home.yml
@@ -38,4 +38,5 @@ jobs:
             -e STATIC_ROOT="{{ secrets.STATIC_ROOT }}" \
             -e SECRET_KEY="{{ secrets.DJANGO_SECRET_KEY }}" shop_api
           cd ~/Projects/shop_api_django
+          export STATIC_ROOT="{{ secrets.STATIC_ROOT }}"
           /home/paul/.cache/pypoetry/virtualenvs/shop-django-M_czz2fv-py3.10/bin/python manage.py collectstatic --settings=shop_django.settings.prod --no-input
