--- a/.github/workflows/home.yml
+++ b/.github/workflows/home.yml
@@ -40,4 +40,5 @@ jobs:
           cd ~/Projects/shop_api_django
           git pull
           export STATIC_ROOT="{{ secrets.STATIC_ROOT }}"
+          /home/paul/.local/bin/poetry install
           /home/paul/.cache/pypoetry/virtualenvs/shop-django-M_czz2fv-py3.10/bin/python manage.py collectstatic --settings=shop_django.settings.prod --no-input
