--- a/.github/workflows/home.yml
+++ b/.github/workflows/home.yml
@@ -31,12 +31,12 @@ jobs:
           docker stop server 
           docker run -d --rm --name server -p 8000:8000 \
             -e DJANGO_SETTINGS_MODULE=shop_django.settings.prod \
-            -e DB_USER="{{ secrets.DB_USER }}" \
-            -e DB_PASSWORD="{{ secrets.DB_PASSWORD }}" \
-            -e DB_HOST="{{ secrets.DB_HOST }}" \
-            -e DB_PORT="{{ secrets.DB_PORT }}" \
-            -e STATIC_ROOT="{{ secrets.STATIC_ROOT }}" \
-            -e SECRET_KEY="{{ secrets.DJANGO_SECRET_KEY }}" shop_api
+            -e DB_USER="${{ secrets.DB_USER }}" \
+            -e DB_PASSWORD="${{ secrets.DB_PASSWORD }}" \
+            -e DB_HOST="${{ secrets.DB_HOST }}" \
+            -e DB_PORT="${{ secrets.DB_PORT }}" \
+            -e STATIC_ROOT="${{ secrets.STATIC_ROOT }}" \
+            -e SECRET_KEY="${{ secrets.DJANGO_SECRET_KEY }}" shop_api
           cd ~/Projects/shop_api_django
           git pull
           /home/paul/.pyenv/shims/python manage.py collectstatic --settings=shop_django.settings.collectstatic --no-input
