--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ Django = "^4.0.4"
 gunicorn = {extras = ["uvicorn"], version = "^20.1.0"}
 uvicorn = "^0.17.6"
 psycopg2 = "^2.9.3"
+django-bootstrap4 = "^22.1"
 
 [tool.poetry.dev-dependencies]
 
