--- a/.github/workflows/home.yml
+++ b/.github/workflows/home.yml
@@ -5,9 +5,50 @@ name: Docker Image CI
 
 on:
   push:
-    branches: [ main ]
+    branches: [ feature/CI_CD_설정 ]
 
 jobs:
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 1
+
+      - name: Set up Python 3.10
+        uses: actions/setup-python@v1
+        with:
+          python-version: 3.10
+
+      - name: Install Poetry
+        uses: dschep/install-poetry-action@v1.2
+
+      - name: Cache Poetry virtualenv
+        uses: actions/cache@v1
+        id: cache
+        with:
+          path: ~/.virtualenvs
+          key: poetry-${{ hashFiles('**/poetry.lock') }}
+          restore-keys: |
+            poetry-${{ hashFiles('**/poetry.lock') }}
+
+      - name: Set Poetry config
+        run: |
+          poetry config settings.virtualenvs.in-project false
+          poetry config settings.virtualenvs.path ~/.virtualenvs
+
+      - name: Install Dependencies
+        run: poetry install
+        if: steps.cache.outputs.cache-hit != 'true'
+
+      - name: Code Quality
+        run: poetry run black . --check
+
+      - name: Test with pytest
+        #        env:
+        #          DJANGO_SETTINGS_MODULE: project.settings
+        #          SECRETS_FILE: .confidential/ci.json
+        run: poetry run ./manage.py --settings=shop_django.settings.dev
   build:
     runs-on: ubuntu-latest
     steps:
