--- a/.github/workflows/home.yml
+++ b/.github/workflows/home.yml
@@ -12,43 +12,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - name: Install poetry
+        run: pipx install poetry
+      - uses: actions/setup-python@v3
         with:
-          fetch-depth: 1
-
-      - name: Set up Python 3.10
-        uses: actions/setup-python@v3
-        with:
-          python-version: 3.10
-
-      - name: Install Poetry
-        uses: dschep/install-poetry-action@v1.2
-
-      - name: Cache Poetry virtualenv
-        uses: actions/cache@v1
-        id: cache
-        with:
-          path: ~/.virtualenvs
-          key: poetry-${{ hashFiles('**/poetry.lock') }}
-          restore-keys: |
-            poetry-${{ hashFiles('**/poetry.lock') }}
-
-      - name: Set Poetry config
-        run: |
-          poetry config settings.virtualenvs.in-project false
-          poetry config settings.virtualenvs.path ~/.virtualenvs
-
-      - name: Install Dependencies
-        run: poetry install
-        if: steps.cache.outputs.cache-hit != 'true'
-
-      - name: Code Quality
-        run: poetry run black . --check
-
-      - name: Test with pytest
-        #        env:
-        #          DJANGO_SETTINGS_MODULE: project.settings
-        #          SECRETS_FILE: .confidential/ci.json
-        run: poetry run ./manage.py --settings=shop_django.settings.dev
+          python-version: '3.10'
+          cache: 'poetry'
+      - run: poetry install
+      - run: poetry run ./manage.py test --settings=shop_django.settings.dev
   build:
     runs-on: ubuntu-latest
     steps:
