--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ gunicorn = {extras = ["uvicorn"], version = "^20.1.0"}
 uvicorn = "^0.17.6"
 psycopg2 = "^2.9.3"
 django-bootstrap4 = "^22.1"
+django-debug-toolbar = "^3.4.0"
 
 [tool.poetry.dev-dependencies]
 
